--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-DATABASE_URL=postgresql://postgres:B.ikram0@localhost/BDD
+database_hostname=localhost
+database_port=5432
+database_password=B.ikram0
+database_name=BDD
+database_username=porstgres
+secret_key=ikrambd
